style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.flex{
    display: flex;
}

.flex-wrap{
    flex-wrap: wrap;
}

header{
    position: relative;
    height: 70px;
    background-color: rgba(0,0,0,255);
}

.container-span{
    position: absolute;
    top: 10px;
    right: 10px;
}

header .span{
    vertical-align: middle;
    text-align: center;
    color: #fff;
    background-color: rgba(74,74,74,255);
    margin: 5px;
    border-radius: 10px;
}

main{
    background-color: rgba(0,0,0,255);
}

.container{
    width: 1300px;
    height: calc(100vh - 170px);
    padding-top: 4rem;
    margin: 0 auto;
}

.card{
    position: relative;
    margin-bottom: 15px;
    margin-right: 7px;
    height: 100px;
    width: 160px;
    background-image: url("https://picsum.photos/200");
    background-size: cover;
    background-position: center;
}

.audio{
    position: absolute;
    bottom: 0;
    left: 0;
    background-color: rgba(105,116,125,.3);
    color: #fff;
    padding: 2%;
}

footer{
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    height: 100px;
    background-color: rgba(34,34,34,255);
    justify-content: space-between;
    color: #fff;

}

.section{
    padding: 1.7rem;
    text-align: center;
}

.segnal{
    font-size: 24px;
    margin-bottom: 7px;
    margin-right: 7px;
}

.indicator{
    font-size: 10px;
    font-family: cursive;
}

.container-segnal{
    margin-right: 18px;
}
.cap{
    line-height: 50px;
    font-weight: bolder;
}

.end-meeting{
    position: relative;
    height: 100%;
    width: 180px;
    color: red;
    font-size: 15px;
    background-color: grey;
}

.close-meeting{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

